--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -284,6 +284,12 @@ config CPU_FREQ_GOV_SLEEPY
 config CPU_FREQ_GOV_HYPER
 	tristate "'hyper' cpufreq policy governor"
 
+config CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND
+bool "intellidemand"
+select CPU_FREQ_GOV_INTELLIDEMAND
+---help---
+          Use the CPUFreq governor 'intellidemand' as default.
+
 config CPU_FREQ_DVFS_MONITOR
 	bool "dvfs monitor"
 	depends on CPU_FREQ
