--- a/drivers/net/wireless/bcmdhd/Makefile
+++ b/drivers/net/wireless/bcmdhd/Makefile
@@ -65,7 +65,11 @@ DHDCFLAGS += -DSUPPORT_SOFTAP_SINGL_DISASSOC
 DHDCFLAGS += -DUSE_STAMAC_4SOFTAP
 
 # DPC priority
+ifeq ($(CONFIG_MACH_JF),y)
 DHDCFLAGS += -DCUSTOM_DPC_PRIO_SETTING=49
+else
+DHDCFLAGS += -DCUSTOM_DPC_PRIO_SETTING=98
+endif
 
 # WiFi turn off delay
 DHDCFLAGS += -DWIFI_TURNOFF_DELAY=100
@@ -77,7 +81,7 @@ DHDCFLAGS += -DCUSTOM_SUSPEND_BCN_LI_DTIM=0
 DHDCFLAGS += -DPKTPRIO_OVERRIDE
 
 # Ioctl timeout 5000ms
-DHDCFLAGS += -DIOCTL_RESP_TIMEOUT=5000
+DHDCFLAGS += -DIOCTL_RESP_TIMEOUT=10000
 
 # WiFi Kernel thread type
 DHDCFLAGS += -DUSE_KTHREAD_API
@@ -88,6 +92,11 @@ DHDCFLAGS += -DUSE_KTHREAD_API
 DHDCFLAGS += -DWL_ENABLE_P2P_IF
 DHDCFLAGS += -DMULTIPLE_SUPPLICANT
 DHDCFLAGS += -DWL_CFG80211_STA_EVENT
+
+#################
+# JellyBean Plus
+#################
+DHDCFLAGS += -DWL_SUPPORT_BACKPORTED_KPATCHES
 
 #########################
 # Chip dependent feature
@@ -102,8 +111,8 @@ ifneq ($(CONFIG_BCM4335),)
   DHDCFLAGS += -DPROP_TXSTATUS -DPROP_TXSTATUS_VSDB
   DHDCFLAGS += -DVSDB
   DHDCFLAGS += -DWL_CFG80211_VSDB_PRIORITIZE_SCAN_REQUEST
-  DHDCFLAGS += -DCUSTOM_GLOM_SETTING=5 -DCUSTOM_RXCHAIN=1
-  DHDCFLAGS += -DENABLE_BCN_LI_BCN_WAKEUP
+  DHDCFLAGS += -DCUSTOM_GLOM_SETTING=8 -DCUSTOM_RXCHAIN=1
+  DHDCFLAGS += -DENABLE_BCN_LI_BCN_WAKEUP 
   DHDCFLAGS += -DROAM_AP_ENV_DETECTION
   DHDCFLAGS += -DBCMSDIOH_TXGLOM -DCUSTOM_TXGLOM=1 -DBCMSDIOH_TXGLOM_HIGHSPEED
   DHDCFLAGS += -DDHDTCPACK_SUPPRESS
@@ -153,6 +162,7 @@ ifneq ($(CONFIG_BCM4330),)
   DHDCFLAGS += -DCUSTOM_GLOM_SETTING=0
   DHDCFLAGS += -DPASS_ARP_PACKET
   DHDCFLAGS += -DWL_CFG80211_VSDB_PRIORITIZE_SCAN_REQUEST
+  DHDCFLAGS += -fno-pic
 endif
 
 ifneq ($(CONFIG_BCM43241),)
@@ -192,6 +202,7 @@ ifeq ($(CONFIG_SPI_SC8810),y)
 endif
 
 #For INITIAL 2G scan features
+#We do not use this from J project.
 #ifneq ($(CONFIG_TARGET_LOCALE_KOR),y)
 #  DHDCFLAGS += -DUSE_INITIAL_2G_SCAN
 #endif
@@ -222,7 +233,10 @@ DHDCFLAGS += -include "dhd_sec_feature.h"
 # Others
 #########
 
+ifneq ($(CONFIG_ARCH_EXYNOS),y)
+# Not needed in Exynos
 EXTRA_LDFLAGS += --strip-debug
+endif
 
 EXTRA_CFLAGS += $(DHDCFLAGS) -DDHD_DEBUG
 EXTRA_CFLAGS += -DSRCBASE=\"$(src)\"
