Aplicando el fix para el FP Bug (thanks @neitferne & @Lanchon)

--- a/kernel/power/Kconfig
+++ b/kernel/power/Kconfig
@@ -345,3 +345,7 @@ config SPEEDUP_KEYRESUME
 	default y
 	---help---
 	  Speed up system resume
+
+config CPU_PM
+	bool
+	depends on SUSPEND || CPU_IDLE
