enhancements to build files

--- a/arch/arm/configs/u1_apolo_defconfig
+++ b/arch/arm/configs/u1_apolo_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated make config: don't edit
-# Linux/arm 3.0.31 Kernel Configuration
+# Linux/arm 3.0.101 Kernel Configuration
 #
 CONFIG_ARM=y
 CONFIG_HAVE_PWM=y
@@ -36,9 +36,9 @@ CONFIG_HAVE_IRQ_WORK=y
 #
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
-CONFIG_CROSS_COMPILE="/home/kernel/gcc-linaro-arm-linux-gnueabi-2012.03-20120326_linux/bin/arm-linux-gnueabi-"
-CONFIG_LOCALVERSION="-ApoloJB_4.19"
-CONFIG_LOCALVERSION_AUTO=y
+CONFIG_CROSS_COMPILE="/home/ruturaj/git/toolchain/UBERTC-arm-eabi-5.3/bin/arm-eabi-"
+CONFIG_LOCALVERSION="-ApoloJB_4.20"
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -106,10 +106,6 @@ CONFIG_RD_GZIP=y
 CONFIG_INITRAMFS_COMPRESSION_GZIP=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 # CONFIG_CC_CHECK_WARNING_STRICTLY is not set
-CONFIG_LTO_MENU=y
-# CONFIG_LTO_DISABLE is not set
-CONFIG_LTO=y
-# CONFIG_LTO_DEBUG is not set
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=1
@@ -179,17 +175,18 @@ CONFIG_LBDAF=y
 #
 # IO Schedulers
 #
-CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
-CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_VR=y
+CONFIG_IOSCHED_CFQ=y
+# CONFIG_IOSCHED_BFQ is not set
+CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
-# CONFIG_DEFAULT_NOOP is not set
-# CONFIG_DEFAULT_SIO is not set
 # CONFIG_DEFAULT_ROW is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_NOOP is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 # CONFIG_INLINE_SPIN_TRYLOCK is not set
 # CONFIG_INLINE_SPIN_TRYLOCK_BH is not set
@@ -609,6 +606,7 @@ CONFIG_PL330=y
 # CONFIG_PCCARD is not set
 CONFIG_ARM_ERRATA_764369=y
 # CONFIG_PL310_ERRATA_769419 is not set
+CONFIG_ARM_ERRATA_775420=y
 
 #
 # Kernel Features
@@ -778,6 +776,7 @@ CONFIG_PM_OPP=y
 CONFIG_PM_RUNTIME_CLK=y
 # CONFIG_SUSPEND_TIME is not set
 CONFIG_SPEEDUP_KEYRESUME=y
+CONFIG_CPU_PM=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_NET=y
 
@@ -2430,7 +2429,6 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_STORAGE_KARMA is not set
 # CONFIG_USB_STORAGE_CYPRESS_ATACB is not set
 # CONFIG_USB_STORAGE_ENE_UB6250 is not set
-# CONFIG_USB_UAS is not set
 # CONFIG_USB_LIBUSUAL is not set
 
 #
@@ -2655,7 +2653,7 @@ CONFIG_STAGING=y
 #
 CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
-CONFIG_ANDROID_LOGGER=m
+CONFIG_ANDROID_LOGGER=y
 # CONFIG_ANDROID_RAM_CONSOLE is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
